fix(styles): Improve spacing above Show more

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -63,6 +63,7 @@
   @include stack;
 
   &__more {
+    padding-top: 1rem;
     display: inline-block;
     color: #aaa;
   }
